--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,7 +27,7 @@ jobs:
 
           # Options
           user: cainthebest
-          template: classic
+          template: terminal
           base: header, activity, community, repositories, metadata
           base_hireable: yes
           config_octicon: yes
@@ -36,7 +36,7 @@ jobs:
           plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
-          plugin_activity: yes
+          plugin_activity: no
           plugin_activity_days: 14
           plugin_activity_filter: all
           plugin_activity_limit: 5
