--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,7 +27,7 @@ jobs:
 
           # Options
           user: cainthebest
-          template: terminal
+          template: classic
           base: header, activity, community, repositories, metadata
           base_hireable: yes
           config_octicon: yes
